package org.rcdukes.objects.lane;

public class BoundaryDefaults {
  public static double DEFAULT_LANE_BOUNDARY_ANGLE = 45;
  public static double DEFAULT_LANE_BOUNDARY_TOLERANCE = 30;
}
